feat: add feature from DI-47