@@ -2,7 +2,6 @@ package com.prakass.aps.security;
 
 import com.prakass.aps.dao.UserAccountRepository;
 import com.prakass.aps.entities.user_account.UserAccountEntity;
-import lombok.AllArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -10,13 +9,14 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
-
 @Service
-@AllArgsConstructor
 public class AuthUserDetailsService implements UserDetailsService {
 
-  UserAccountRepository userAccountRepository;
+  private final UserAccountRepository userAccountRepository;
+
+  public AuthUserDetailsService(UserAccountRepository userAccountRepository) {
+    this.userAccountRepository = userAccountRepository;
+  }
 
   @Override
   public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
@@ -28,12 +28,10 @@ public class AuthUserDetailsService implements UserDetailsService {
         userAccountRepository.findAllRolesByUserId(userAccountEntity.getId()));
 
     return User.builder()
-        .username(userAccountEntity.getUsername())
+        .username(userAccountEntity.getEmail())
         .password(userAccountEntity.getPasswordHash())
         .authorities(
-            userAccountEntity.getRoles().stream()
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList()))
+            userAccountEntity.getRoles().stream().map(SimpleGrantedAuthority::new).toList())
         .build();
   }
 }
